--- a/public/css/admin2.css
+++ b/public/css/admin2.css
@@ -9,6 +9,26 @@
 
 /*//////////////////////////////////////////////////////////////////
 [ LOADDING ]*/
+#loading {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  opacity: 0.7;
+  background-color: #fff;
+  z-index: 99;
+}
+
+.loading-image-container{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
 .animsition-loading-1 {
   position: absolute;
   top: 50%;
